# asteroid-timer

./: CMakeLists.txt
src/: main.qml
